# graph_partition_optim

./: .gitignore  README.md  benchmark.sh  bilan.ipynb  pyproject.toml  result.ipynb
data/: centSommets.txt  cinqCentSommets.txt  cinqSommets.txt  cinquanteSommets.txt  dixMilleSommets.txt  dixSeptSommets.txt  dixSommets.txt  milleSommets.txt  neufSommets.txt  quatreSommets.txt  quinzeSommets.txt  test.txt  trenteSommets.txt  vingtCinqSommets.txt  vingtDeuxSommets.txt  vingtEtunSommets.txt  vingtQuatreSommets.txt  vingtSommets.txt  vingtTroisSommets.txt
sol/enum/: date.txt  log_centSommets.txt.txt  log_cinqCentSommets.txt  log_cinqCentSommets.txt.txt  log_cinqSommets.txt.txt  log_cinquanteSommets.txt  log_dixMilleSommets.txt  log_dixMilleSommets.txt.txt  log_dixSeptSommets.txt  log_dixSeptSommets.txt.txt  log_dixSommets.txt  log_milleSommets.txt.txt  log_quatreSommets.txt  log_quinzeSommets.txt  log_quinzeSommets.txt.txt  log_trenteSommets.txt  log_vingtCinqSommets.txt.txt  log_vingtDeuxSommets.txt.txt  log_vingtEtunSommets.txt  log_vingtQuatreSommets.txt  log_vingtQuatreSommets.txt.txt  log_vingtSommets.txt  log_vingtSommets.txt.txt  log_vingtTroisSommets.txt.txt  results.csv
sol/gradient/: date.txt  log_centSommets.txt  log_cinqCentSommets.txt  (+16 more)
src/: Structures.py  algorithms.py  best_parameters.py  bilan.ipynb  descenteDeGradiant.py  enum.py  enumeration.py  eval.py  evaluateur.py  genetic.py  gradient_descent.py  main.py  metaheuristics.py  neighborhood.py  parser.py  random_partition.py  resultAutomatism.py  simulated_annealing.py  structures.py  test.py  utils.py
(+38 files in other folders)
